--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -125,10 +125,10 @@
         android:id="@+id/btnGenerateImage"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="40dp"
+        android:layout_marginStart="30dp"
         android:backgroundTint="@color/red"
         android:fontFamily="@font/poppins_regular"
-        android:text="Generate"
+        android:text="Snap"
         android:textSize="15sp"
         app:cornerRadius="16dp"
         app:layout_constraintStart_toEndOf="@id/label_date"
